# MyMeditationsApp

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  CMakeLists.txt  Database.cpp  Database.h  Meditation.h  MyMeditationsCli.cpp  UiHandler.cpp  UiHandler.h
unit_tests/: CMakeLists.txt  database_test.cpp  meditation_test.cpp
